# rag-agent-sigmoide

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
data/chroma_db/: chroma.sqlite3
notebooks/: agent-rag.ipynb  extract-text-svg.ipynb
rag-agent-sigmoide/: agent-rag.ipynb
rag-agent-sigmoide/chroma_db/: chroma.sqlite3
src/rag_agent/: main.py
src/rag_agent/utils/: extract_text.py
utils/: extract_text.py
